2008-05-29  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/plugin_manager.py:
	    Removed all startable and stoppable stuff as all plugins
	    need to implement start and stop methods 

2008-05-29  Ben Van Mechelen  <me@benvm.be>

	* plugins/dtc_clearer/dtc_clearer.py:
	    Implement start and stop methods
	

2008-05-20  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    Add a method to read special commands
	* garmon/scheduler.py:
	* garmon/sensor.py:
	* garmon/widgets.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
		new Command and Sensor class
	    got rid of OBDData and friends
	* scripts/elm_sim.py:
	    better simulate the behaviour of an ELM device


2008-05-08  Ben Van Mechelen  <me@benvm.be>

	* plugins/dtc_clearer/dtc_clearer.py:
        implement unload method
        

2008-05-06  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* plugins/dtc_reader/dtc_reader.py:
	    implemented get_mil and get_dtc_num
	    

2008-05-06  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    Add interface to base class
	* garmon/plugin.py:
	    Add interface to base class
	    inherit from GObject
	* plugins/dashboard/dashboard.py:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/dtc_reader/dtc_reader.py:
	* plugins/live_data/live_data.py:
        call Plugin.__init__


2008-05-05  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* garmon/plugin.py:
	* garmon/scheduler.py:
	* garmon/sensor.py:
	* plugins/dtc_reader/dtc_reader.glade:
	* plugins/dtc_reader/dtc_reader.py:
	    change the way dtcs are read
	    

2008-05-03  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    tried to subclass IOBDDevice from GInterface but this causes
	    a segfault. Placed a comment above the class defintion.
	    

2008-05-03  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* plugins/dashboard/dashboard.py: