@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.2 on Fri Apr 18 16:33:36 2008 -->
+<!--Generated with glade3 3.4.5 on Thu May 29 22:37:17 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="window1">
     <child>
@@ -300,7 +300,7 @@
           </widget>
         </child>
         <child>
-          <widget class="GtkLabel" id="label1">
+          <widget class="GtkLabel" id="label4">
             <property name="visible">True</property>
             <property name="label" translatable="yes">General</property>
           </widget>
@@ -313,7 +313,7 @@
           <placeholder/>
         </child>
         <child>
-          <widget class="GtkLabel" id="label2">
+          <widget class="GtkLabel" id="label8">
             <property name="visible">True</property>
             <property name="label" translatable="yes">page 2</property>
           </widget>
@@ -327,7 +327,7 @@
           <placeholder/>
         </child>
         <child>
-          <widget class="GtkLabel" id="label3">
+          <widget class="GtkLabel" id="label9">
             <property name="visible">True</property>
             <property name="label" translatable="yes">page 3</property>
           </widget>
@@ -341,7 +341,7 @@
           <placeholder/>
         </child>
         <child>
-          <widget class="GtkLabel" id="label4">
+          <widget class="GtkLabel" id="label10">
             <property name="visible">True</property>
             <property name="label" translatable="yes">page 4</property>
           </widget>
@@ -356,52 +356,10 @@
   </widget>
   <widget class="GtkWindow" id="window2">
     <child>
-      <widget class="GtkVBox" id="new_prefs_vbox">
+      <widget class="GtkVBox" id="general_prefs_vbox">
         <property name="visible">True</property>
         <property name="border_width">10</property>
         <property name="spacing">14</property>
-        <child>
-          <widget class="GtkFrame" id="frame9">
-            <property name="visible">True</property>
-            <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
-            <child>
-              <widget class="GtkAlignment" id="alignment9">
-                <property name="visible">True</property>
-                <property name="top_padding">2</property>
-                <property name="left_padding">12</property>
-                <child>
-                  <widget class="GtkHBox" id="hbox13">
-                    <property name="visible">True</property>
-                    <child>
-                      <widget class="GtkEntry" id="preference;text;str;port">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                      </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                      </packing>
-                    </child>
-                  </widget>
-                </child>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkLabel" id="label14">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;b&gt;Serial Port:&lt;/b&gt;</property>
-                <property name="use_markup">True</property>
-              </widget>
-              <packing>
-                <property name="type">label_item</property>
-              </packing>
-            </child>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-          </packing>
-        </child>
         <child>
           <widget class="GtkFrame" id="frame10">
             <property name="visible">True</property>
@@ -469,7 +427,6 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
-            <property name="position">1</property>
           </packing>
         </child>
         <child>
@@ -538,7 +495,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
-            <property name="position">2</property>
+            <property name="position">1</property>
           </packing>
         </child>
         <child>
@@ -641,8 +598,97 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
-            <property name="position">3</property>
+            <property name="position">2</property>
           </packing>
+        </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkWindow" id="window3">
+    <child>
+      <widget class="GtkVBox" id="device_prefs_vbox">
+        <property name="visible">True</property>
+        <property name="border_width">10</property>
+        <property name="spacing">14</property>
+        <child>
+          <widget class="GtkFrame" id="frame5">
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <child>
+              <widget class="GtkAlignment" id="alignment5">
+                <property name="visible">True</property>
+                <property name="top_padding">2</property>
+                <property name="left_padding">12</property>
+                <child>
+                  <widget class="GtkHBox" id="hbox4">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkEntry" id="preference;text;str;device.portname">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                      </packing>
+                    </child>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label11">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">&lt;b&gt;Serial Port:&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </widget>
+              <packing>
+                <property name="type">label_item</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkFrame" id="frame6">
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <child>
+              <widget class="GtkAlignment" id="alignment6">
+                <property name="visible">True</property>
+                <property name="top_padding">2</property>
+                <property name="left_padding">12</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label12">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">&lt;b&gt;Baudrate:&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </widget>
+              <packing>
+                <property name="type">label_item</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
         </child>
       </widget>
     </child>
